--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -32,7 +32,7 @@ html {
 	display: none;
 }
 /*inputs*/
-#msform input, #msform textarea {
+#msform input, #msform textarea, #msform select {
 	padding: 15px;
 	border: 1px solid #ccc;
 	border-radius: 3px;
@@ -84,7 +84,7 @@ html {
 	text-transform: uppercase;
 	font-size: 12px;
 	font-weight: bold;
-	width: 33.33%;
+	width: 50%; 
 	float: left;
 	position: relative;
 }
